# intent_detector_service

./: .mypy.ini  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  users.json
intent_detector_service/: app.py  config.py
intent_detector_service/routes/: __init__.py  routers.py
intent_detector_service/routes/auth/: auth_routes.py
intent_detector_service/routes/intents/: intent_routes.py
intent_detector_service/routes/ping/: ping.py
intent_detector_service/services/: base_intent_detector.py  detector_factory.py  local_intent_detector.py  luis_engine_detector.py  oauth.py  watson_engine_detector.py
intent_detector_service/type_models/request/: intent_detection.py
intent_detector_service/type_models/response/: intent_detection.py
scripts/: env.sh  test_routes.json
scripts/luis_scripts/: en_train_data.json  list_apps.py  train_model.py
tests/: conftest.py
